<resources>
    <string name="app_name">Confession Diary</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">Confession Diary</string>
    <string name="id">EM</string>
    <string name="find"> 아이디/비밀번호 찾기</string>
    <string name="newuser">회원가입</string>
    <string name="password">PW</string>
    <string name="button_name">LOGIN</string>

    <!-- find Fragment에서 사용 -->
    <string name="find_id_textView">이메일 입력</string>
    <string name="find_email_EditText">입력후 오른쪽 버튼을 눌러 주세요</string>
    <string name="find_password_textView">비밀번호 찾기 </string>
    <string name="find_id_editText">아이디를 입력해주십시오</string>
    <string name="find_id_check_textView">비밀번호를 찾으려면 이메일을 체크</string>

    <!-- 조인 Fragment에서 사용 -->
    <string name="joinid">ID</string>
    <string name="joinpass">PASSWORD</string>
    <string name="joinpassconfirm">PASSWORD 확인</string>
    <string name="joinemail">EMAIL</string>
    <string name="joinid_hint">ID를 입력해주세요</string>
    <string name="joinpass_hint">PASSWORD를 입력해주세요</string>
    <string name="joinpassconfirm_hint">PASSWORD를 다시 입력해주세요</string>
    <string name="joinemail_hint">EMAIL을 입력해주세요</string>

    <!-- choice dialog 사용 -->
    <string name="choiceText_Diary">Diary</string>
    <string name="choiceText_Community">Community</string>

    <!-- quest dialog 사용 -->
    <string name="questText_Online">ONLINE</string>
    <string name="questText_Offline">OFFLINE</string>


    <!-- choice diary 사용 -->
    <string name="diary_textView">퀘스트 목록</string>


    <!-- new diary_edit_choice_dialog -->
    <string name="newdiary_basics_choice_textView">Basics</string>
    <string name="newdiary_template_choice_textView">Template</string>


    <!-- editor acitivity에서 사용 -->
    <string name="editor_Title_textView">Title (0/30)</string>
    <string name="editor_Conent_textView">Content (0/300)</string>
    <string name="warning"> 경고 : 글자 수가 넘어가면 글자 효과가 풀립니다</string>
    <string name="editor_lastpage_textView">공개 여부를 선택해 주십시오</string>
    <string name="editor_lastpage_r_button1">공개로 할래</string>
    <string name="editor_lastpage_r_button2">비공개로 할래</string>
    <string name="editor_lastpage_ok_button">작성</string>

    <!-- full size diary xml에서 사용 -->
    <string name="fulldiary_Title_textView">Title</string>
    <string name="fulldiary_Conent_textView">Content</string>

    <!-- quest comment xml에서 사용 -->
    <string name="quest_comment_ok_Button">확인</string>
    <string name="quest_comment_success_Button">퀘스트 완료</string>

    <!-- community_diary_full_page xml에서 사용 -->
    <string name="communityDiary_comment_textView">에게 댓글 작성</string>


    <!-- quest_choice_onlin_page xml 에서 사용 -->
    <string name="questList_textView">퀘스트 선택</string>

    <!-- DiaryAdapter(class)에서 사용 -->
    <string name="diarylist_publicityStatus_on">공개</string>
    <string name="diarylist_publicityStatus_off">비공개</string>

    <!-- QuestAdapter(class)에서 사용 -->
    <string name="quest_list_false">(진행중)</string>
    <string name="quest_list_true">(완료)</string>

    <!-- diarylist_RecyclerXml에서 사용 -->
    <string name="listRecycler_check_Switch">공개</string>

    <!-- QuestListAdapter Xml에서 사용 -->
    <string name="onlineResource_OKbutton">수락</string>


    <!-- DiaryMain_Quest_Dialog(Class)에서 사용 -->
    <string name="MyQuest_Dialog_Title">주의</string>
    <string name="MyQuest_Dialog_Message">바르게 이행하였음을 알립니다.</string>
    <string name="MyQuest_Dialog_OK_Button">예.</string>
    <string name="MyQuest_Dialog_Cansel_Button">다시 생각해 보겠습니다.</string>


    <!-- Bubble_ClickListener(Class)에서 사용 -->
    <string name="Bubble_ClickListener_click0">안녕 어서와</string>
    <string name="Bubble_ClickListener_click1">어떤 날 이었어?</string>
    <string name="Bubble_ClickListener_click3">다음은 카테고리를 선택해줘</string>
    <string name="Bubble_ClickListener_click4">우선 카테고리를 선택해줘</string>

    <string name="Bubble_ClickListener_click6_0">주변 상황을 인지할 수 있어 도움이 될거야 </string>
    <string name="Bubble_ClickListener_click6_1">관대해지면 긍정적일 수 있어</string>
    <string name="Bubble_ClickListener_click6_2">너는 너를 이해할 테니 더 도움이 될거야</string>
    <string name="Bubble_ClickListener_click6_3">남이 아닌 자신에게 집중 할테니 너는 탐구해 낼 수 있을 거야</string>
    <string name="Bubble_ClickListener_click6_4">인식할 수 있으니 대처할 수 있을 거야</string>
    <string name="Bubble_ClickListener_click6_5">이해할 수 있을 꺼고 통제할 수 있을 거야</string>
    <string name="Bubble_ClickListener_click6_6">짧게라도 좋아 해소에 도움이 될거야</string>
    <string name="Bubble_ClickListener_click6_7">자유롭게 말해줘</string>

    <string name="Bubble_ClickListener_lastclick">마지막으로 공개 여부를 알려줘</string>

    <string name="Bubble_ClickListener_lastclick1_2">마지막 온도를 설정해줄래?</string>
    <string name="Bubble_ClickListener_lastclick2">고마워!</string>

    <!-- commentAdapter(Class)에서 사용 -->
    <string name="commentAdapter_like_snakbar"> 좋아요! 👍</string>
    <string name="commentAdapter_dislike_snakbar"> 싫어요 ㅡ.ㅡ 👎</string>



    <!-- QuestListAdapter(Class)에서 사용 -->
    <string name="QuestListAdapter_Dialog_name"> 에게 받은 메시지</string>
    <string name="QuestListAdapter_Dialog_ok"> 퀘스트 수락하기</string>
    <string name="QuestListAdapter_Dialog_no"> 거부</string>

    <!-- CommentPage (Class)에서 사용 -->
    <string name="comment_SnackBar_fail">저장 오류.</string>


    <!-- SlidingPageAnimationListener (class)에서 사용 -->
    <string name="SlidingPageAnimationListener_ToastMessage">이미 완료된 퀘스트 입니다.</string>
    <string name="SlidingPageAnimationListener_ToastMessage2">많은 이들에게 큰 본보기가 되실 거예요.\n 당신의 여정을 축복합니다. </string>

</resources>