<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="250dp"
    android:layout_height="wrap_content"
    android:background="#EBEBEC"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        app:cardCornerRadius="4dp"
        app:cardElevation="4dp">

        <TextView
            android:id="@+id/textView10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/editor_lastpage_textView"
            android:textColor="#9F9F9F"
            android:textStyle="bold" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="230dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="-5dp"
        app:cardCornerRadius="10dp"
        app:cardElevation="3dp">

        <RadioGroup
            android:id="@+id/lastPage_choice_radioGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="3dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="3dp">

            <RadioButton
                android:id="@+id/lastPage_yes_radioButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#FFFFFF"
                android:buttonTint="#874545"
                android:gravity="center"
                android:text="@string/editor_lastpage_r_button1"
                android:textSize="14sp" />

            <RadioButton
                android:id="@+id/lastPage_no_radioButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#FFFFFF"
                android:checked="true"
                android:gravity="center"
                android:text="@string/editor_lastpage_r_button2"
                android:textSize="14sp" />
        </RadioGroup>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="-15dp"
        android:layout_marginBottom="20dp">

        <android.widget.Button
            android:id="@+id/lastPage_log_Button"
            android:layout_width="160dp"
            android:layout_height="30dp"

            android:layout_marginLeft="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            android:background="#F2ECFF"
            android:text="@string/editor_lastpage_ok_button"
            android:textSize="16sp" />
    </androidx.cardview.widget.CardView>
</LinearLayout>