<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/catholic_church"
    android:elevation="-0.1dp"
    tools:context=".appMainAcitivityPage.Choice_Activity">

    <androidx.cardview.widget.CardView
        android:id="@+id/login_cardView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="400dp"
        android:layout_marginBottom="200dp"
        android:backgroundTint="#C6E3E5EF"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:cardCornerRadius="4dp"
            app:cardElevation="4dp">

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="25dp"
                android:backgroundTint="#AEE3E1E1"
                app:layout_constraintBottom_toTopOf="@+id/cardview_id"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="9dp"
                    android:layout_marginTop="4dp"
                    android:layout_marginEnd="9dp"
                    android:layout_marginBottom="4dp"
                    android:text="@string/login"
                    android:textAllCaps="true"
                    android:textColor="#72606060"
                    android:textSize="17sp" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView

                android:id="@+id/cardview_id"

                android:layout_width="0dp"
                android:layout_height="wrap_content"

                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="50dp"
                android:backgroundTint="#E8E6E6"
                app:cardCornerRadius="8dp"
                app:cardElevation="7dp"
                app:layout_constraintBottom_toBottomOf="parent"

                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <LinearLayout
                    android:id="@+id/linearLayout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"

                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/textView2"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="5dp"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:text="@string/id"
                            android:textColor="#000000"
                            android:textSize="20sp"
                            android:textStyle="bold" />

                        <EditText
                            android:id="@+id/basiclogin_id_editTextText"
                            android:layout_width="0dp"
                            android:layout_height="60dp"
                            android:layout_marginLeft="10dp"
                            android:layout_marginRight="10dp"
                            android:layout_weight="7"
                            android:ems="10"
                            android:inputType="text" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/textView4"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="5dp"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:text="@string/password"
                            android:textColor="#000000"
                            android:textSize="18sp"
                            android:textStyle="bold" />

                        <EditText
                            android:id="@+id/basiclogin_password_editTextText"
                            android:layout_width="0dp"
                            android:layout_height="60dp"
                            android:layout_marginLeft="10dp"
                            android:layout_marginRight="10dp"
                            android:layout_weight="7"
                            android:ems="10"
                            android:inputType="textPassword" />
                    </LinearLayout>
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="-2dp"
                android:layout_marginEnd="23dp"
                android:backgroundTint="#E7E5E5"
                app:cardCornerRadius="3dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cardview_id">

                <android.widget.Button
                    android:id="@+id/basiclogin_ok_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginBottom="2dp"
                    android:backgroundTint="#C7C5DA"
                    android:text="@string/button_name"
                    android:textColor="#85393939"
                    android:textSize="17sp" />
            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/find_id_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="17dp"
                android:layout_marginTop="15dp"
                android:elevation="3dp"
                android:text="@string/find"
                android:textColor="#000000"
                android:textStyle="bold|italic"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cardview_id" />

            <TextView
                android:id="@+id/new_user_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="17dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="20dp"
                android:elevation="3dp"
                android:text="@string/newuser"
                android:textColor="#000000"
                android:textStyle="bold|italic"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/find_id_textView" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <ImageView
        android:id="@+id/basic_layout_ImageView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scaleType="centerCrop"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/key_image" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clayouto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="330dp"
        android:layout_marginBottom="140dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <android.widget.Button
            android:id="@+id/closeButton"
            android:layout_width="30dp"
            android:layout_height="30dp"

            android:layout_marginEnd="2dp"
            android:background="@drawable/close_img"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <FrameLayout
            android:id="@+id/login_layouto"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#ABB4B4D1"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

        </FrameLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
